--- a/blogs/templates/blogs/profile.html
+++ b/blogs/templates/blogs/profile.html
@@ -1,5 +1,11 @@
 {% extends 'blogs/profilebase.html' %}
 
 {% block loginstatus %}
-Login/Signup
+
+    {% if status == 'LOGIN' %}
+        <a href="{% url 'logout' %}" >Logout {{ username }}</a> 
+    {% else %}
+        <a href="{% url 'login' %}" >Signin/Signup</a>
+    {% endif %}
+
 {% endblock %}
